config/network-policy/compass-runtime-agent/allow-from-healthcheck.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--acm-compass-allow-from-health-check
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: compass-runtime-agent
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8090
