config/network-policy/compass-runtime-agent/allow-from-istio-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--acm-compass-allow-from-sidecar
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: compass-runtime-agent
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: istiod
      ports:
        - protocol: TCP
          port: 443
